--- a/styles.css
+++ b/styles.css
@@ -15,8 +15,8 @@ html{
     width: 90%;
     max-width: 470px;
     border-radius: 20px;
-    margin:100px auto 0;
-    padding: 40px 35px;
+    margin:50px auto 0;
+    padding: 30px 35px;
     color: #fff;
     text-align: center;
 }
@@ -59,6 +59,7 @@ html{
     margin-top: 20px;
 }
 .weather h1{
+    margin-bottom: 10px;
     font-size: 80px;
     font-weight: 500;
 }
